cards overlaping navbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,7 @@
   h2{
     font-size: 40px;
   }
-  #accordionPanelsStayOpenExample{
-    z-index:0; 
-  }
+  
   #myTopnav {
     z-index:1; 
     overflow: hidden;
